--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,4 +1,4 @@
-<table cdk-table [dataSource]="tableDataSource$">
+<table cdk-table [dataSource]="tableDataSource$" class="table table-hover">
   
   <!-- Hero Name Column -->
   <ng-container cdkColumnDef="name">
@@ -15,44 +15,86 @@
   <!-- Hero Attack Column -->
   <ng-container cdkColumnDef="attack">
     <th cdk-header-cell *cdkHeaderCellDef> Attack </th>
-    <td cdk-cell *cdkCellDef="let row"> {{row.attack}} </td>
+    <td cdk-cell 
+        *cdkCellDef="let row" 
+        [ngClass]="{ 
+                     'table-success': superlatives$.value['highest-attack'] === row.name,
+                     'table-danger': superlatives$.value['lowest-attack'] === row.name
+                   }">
+      {{row.attack}} 
+    </td>
   </ng-container>
 
   <!-- Hero Defense Column -->
   <ng-container cdkColumnDef="defense">
     <th cdk-header-cell *cdkHeaderCellDef> Defense </th>
-    <td cdk-cell *cdkCellDef="let row"> {{row.defense}} </td>
+    <td cdk-cell 
+        *cdkCellDef="let row" 
+        [ngClass]="{ 
+                     'table-success': superlatives$.value['highest-defense'] === row.name,
+                     'table-danger': superlatives$.value['lowest-defense'] === row.name
+                   }">
+      {{row.defense}} 
+    </td>
   </ng-container>
 
   <!-- Hero Speed Column -->
   <ng-container cdkColumnDef="speed">
     <th cdk-header-cell *cdkHeaderCellDef> Speed </th>
-    <td cdk-cell *cdkCellDef="let row"> {{row.speed}} </td>
+    <<td cdk-cell 
+    *cdkCellDef="let row" 
+    [ngClass]="{ 
+                 'table-success': superlatives$.value['highest-speed'] === row.name,
+                 'table-danger': superlatives$.value['lowest-speed'] === row.name
+               }">
+  {{row.speed}} 
+</td>
   </ng-container>
 
   <!-- Hero Healing Column -->
   <ng-container cdkColumnDef="healing">
     <th cdk-header-cell *cdkHeaderCellDef> Healing </th>
-    <td cdk-cell *cdkCellDef="let row"> {{row.healing}} </td>
+    <td cdk-cell 
+        *cdkCellDef="let row" 
+        [ngClass]="{ 
+                     'table-success': superlatives$.value['highest-healing'] === row.name,
+                     'table-danger': superlatives$.value['lowest-healing'] === row.name
+                   }">
+      {{row.healing}} 
+    </td>
   </ng-container>
 
   <!-- Hero Recovery Column -->
   <ng-container cdkColumnDef="recovery">
     <th cdk-header-cell *cdkHeaderCellDef> Recovery </th>
-    <td cdk-cell *cdkCellDef="let row"> {{row.recovery}} </td>
+    <td cdk-cell 
+        *cdkCellDef="let row" 
+        [ngClass]="{ 
+                     'table-success': superlatives$.value['highest-recovery'] === row.name,
+                     'table-danger': superlatives$.value['lowest-recovery'] === row.name
+                   }">
+      {{row.recovery}} 
+    </td>
   </ng-container>
 
   <!-- Hero Health Column -->
   <ng-container cdkColumnDef="health">
     <th cdk-header-cell *cdkHeaderCellDef> Health </th>
-    <td cdk-cell *cdkCellDef="let row"> {{row.health}} </td>
+    <td cdk-cell 
+        *cdkCellDef="let row" 
+        [ngClass]="{ 
+                     'table-success': superlatives$.value['highest-health'] === row.name,
+                     'table-danger': superlatives$.value['lowest-health'] === row.name
+                   }">
+      {{row.health}} 
+    </td>
   </ng-container>
 
   <!-- Level Up Column -->
   <ng-container cdkColumnDef="levelUp">
     <th cdk-header-cell *cdkHeaderCellDef></th>
     <td cdk-cell *cdkCellDef="let row">
-      <button (click)="levelUp(row.name)">Level Up!!!</button>
+      <button class="btn btn-primary" (click)="levelUp(row.name)">Level Up!!!</button>
     </td>
   </ng-container>
 
